added dev dependencies for unit testing and package-lock.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "npm test"
   },
+  "devDependencies": {
+    "sinon": "^6.0.0",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kuper-adrian/clean-cache.git"
