--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple single-file, in-memory cache.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout=3000 .",
+    "test": "nyc mocha --timeout=3000 .",
     "lint": "./node_modules/.bin/eslint *.js"
   },
   "devDependencies": {
@@ -13,7 +13,9 @@
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0"
+    "eslint-plugin-import": "^2.12.0",
+    "istanbul": "^0.4.5",
+    "nyc": "^12.0.2"
   },
   "repository": {
     "type": "git",
