--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nyc mocha --timeout=3000 .",
-    "lint": "./node_modules/.bin/eslint *.js"
+    "lint": "./node_modules/.bin/eslint *.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
@@ -15,7 +16,9 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
     "istanbul": "^0.4.5",
-    "nyc": "^12.0.2"
+    "nyc": "^12.0.2",
+    "coveralls": "^3.0.1",
+    "mocha-lcov-reporter": "^1.3.0"
   },
   "repository": {
     "type": "git",
